Bug 403734 - Meta key config to launch Latte Dock calling application launcher instead
Summary: Meta key config to launch Latte Dock calling application launcher instead
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.8.5
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-29 13:29 UTC by Russ Hay
Modified: 2019-02-02 08:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Russ Hay 2019-01-29 13:29:42 UTC
SUMMARY
I followed the guidance to amend kwinrc to launch Latte Dock using Meta

kwriteconfig5 --file ~/.config/kwinrc --group ModifierOnlyShortcuts --key Meta "org.kde.lattedock,/Latte,org.kde.LatteDock,activateLauncherMenu"
qdbus org.kde.KWin /KWin reconfigure

..however the Meta Key calls the Application Launcher rather than Latte Dock. 

STEPS TO REPRODUCE
1. configure kwinrc
2. press Meta Key

OBSERVED RESULT
Application launcher starts

EXPECTED RESULT
Latte Dock presents

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 5.14.90
(available in About System)
KDE Plasma Version: 5.14.90
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.2

ADDITIONAL INFORMATION
Using Wayland.
Comment 1 Michail Vourlakos 2019-01-29 13:37:55 UTC
What do you mean that you want Meta shortcut to launch Latte Dock?
Comment 2 Russ Hay 2019-01-29 13:49:54 UTC
Hi, I mean 'i want the dock to appear when I press the meta key'.
Comment 3 Michail Vourlakos 2019-01-29 16:11:49 UTC
(In reply to Russ Hay from comment #2)
> Hi, I mean 'i want the dock to appear when I press the meta key'.

this is not supported... 

the shortcut to show Latte dock is "Meta+`" and you can alter it from plasma systemsettings->Global Shortcuts->Latte Dock but I dont think single Meta can be used this way
Comment 4 Russ Hay 2019-01-29 16:26:33 UTC
Okay, I thought this was supported as the example in the Latte-dock wiki FAQ page here show it being mapped to the Meta key. https://github.com/psifidotos/Latte-Dock/wiki/F.A.Q.

Thanks for the speedy response tho
Comment 5 Michail Vourlakos 2019-01-31 16:33:23 UTC
If this is accepted: https://phabricator.kde.org/D18620 then that could be possible with Latte git version
Comment 6 Michail Vourlakos 2019-02-01 18:21:03 UTC
Git commit f2f8f0eb8b82affb4d7f82689a52ea6189843c27 by Michail Vourlakos.
Committed on 01/02/2019 at 18:19.
Pushed by mvourlakos into branch 'master'.

improvements for Meta behavior

--global shortcuts now tracks modifiers changes
and trys to do the best for the user.
1. When Meta is pressed and holded latte views are
shown
2. When Meta is clicked but without been holded then
the Application Launcher code path is preferred
3. Activating Latte entries does not follow the
Meta pressedAndHolded code path
4. Pressing any other modifier except Meta cancels the
Meta pressed code path

M  +21   -10   app/globalshortcuts.cpp
M  +3    -0    app/globalshortcuts.h

https://commits.kde.org/latte-dock/f2f8f0eb8b82affb4d7f82689a52ea6189843c27
Comment 7 Michail Vourlakos 2019-02-01 18:21:28 UTC
(In reply to Russ Hay from comment #4)
> 

this is supported now from Latte git version
Comment 8 Russ Hay 2019-02-01 18:39:55 UTC
thank you!!!!
Comment 9 trmdi 2019-02-02 07:13:30 UTC
(In reply to Michail Vourlakos from comment #6)
> 4. Pressing any other modifier except Meta cancels the
> Meta pressed code path

If I press and hold "Meta + another modifier" e.g. Meta+Shift/Meta+Ctrl...
Latte views and badges should be shown like when I press and hold Meta. Because some users set hotkeys like Meta+Shift+s... In some cases, they could forget the shortcuts while they press & hold Meta+Shift...
Currently, when I press&hold Meta+Shift... Latte views and badges will not be shown.
Comment 10 Michail Vourlakos 2019-02-02 07:41:49 UTC
(In reply to trmdi from comment #9)
> (In reply to Michail Vourlakos from comment #6)
> > 4. Pressing any other modifier except Meta cancels the
> > Meta pressed code path
> 
> If I press and hold "Meta + another modifier" e.g. Meta+Shift/Meta+Ctrl...
> Latte views and badges should be shown like when I press and hold Meta.
> Because some users set hotkeys like Meta+Shift+s... In some cases, they
> could forget the shortcuts while they press & hold Meta+Shift...
> Currently, when I press&hold Meta+Shift... Latte views and badges will not
> be shown.

I dont agree, the code must protect the false positives. E.g the user is using Meta+Shif+J for Kwin or plasma or etc. etc. Latte shouldnt break these workflows.


> Currently, when I press&hold Meta+Shift... Latte views and badges will not
be shown.

this is intentional, wasnt one of your proposals that when Latte is activating an item to NOT show the Shortcut badges at https://phabricator.kde.org/D18620??
Comment 11 trmdi 2019-02-02 08:07:20 UTC
I meant:
- holding Meta+Shift -> show badges.
- press Meta+Shift+j -> not show. (yes, that is one of my proposal)
That does not break anything. Just a decision when it would display badges.

But, hmm, after thinking again, I think this is not really necessary.
So, never mind, the current implementation is good enough.