improvements for Meta behavior

--global shortcuts now tracks modifiers changes
and trys to do the best for the user.
1. When Meta is pressed and holded latte views are
shown
2. When Meta is clicked but without been holded then
the Application Launcher code path is preferred
3. Activating Latte entries does not follow the
Meta pressedAndHolded code path
4. Pressing any other modifier except Meta cancels the
Meta pressed code path

BUG: 403734